--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a href="#home" class="navbar-brand page-scroll">Sandhika Galih</a>
+          <a href="#home" class="navbar-brand page-scroll">Hariman Pandiaman</a>
         </div>
         
 
@@ -49,9 +49,9 @@
     
     <!-- jumbotron -->
     <div class="jumbotron text-center">
-      <img src="img/sandhika.png" class="img-circle">
-      <h1>Sandhika Galih</h1>
-      <p>Lecturer | Web Developer | YouTuber</p>
+      <img src="img/harimanpandiaman.png" class="img-circle">
+      <h1>Hariman Pandiaman</h1>
+      <p>Kang Ghosting | Veteran Sadboy | Programmer</p>
     </div>
     <!-- akhir jumbotron -->
 
@@ -162,7 +162,7 @@
                 <label for="pesan">Pesan</label>
                 <textarea class="form-control" rows="10" placeholder="masukkan pesan"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Kirim Pesan</button>
+              <button type="submit" class="btn btn-primary">Kirim Pesan Isi Hati Mu</button>
             </form>
           </div>
         </div>
@@ -176,12 +176,12 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-12">
-            <p>&copy; copyright 2017 | built with <i class="glyphicon glyphicon-heart"></i> by. <a href="http://instagram.com/sandhikagalih">Sandhika Galih</a>.</p>
+            <p>&copy; copyright 2021 | built with <i class="glyphicon glyphicon-heart"></i> by. <a href="http://instagram.com/harimanpandiaman">Hariman Pandiaman</a>.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-12">
-            <a href="http://youtube.com/webprogrammingunpas" class="btn btn-danger"><i class="glyphicon glyphicon-play"></i> Subscribe to YouTube</a>
+            <a href="http://youtube.com/Hariman Phandiaman" class="btn btn-danger"><i class="glyphicon glyphicon-play"></i> Subscribe to YouTube</a>
           </div>
         </div>
       </div>
